# Ros2_Proyecto_UNED

./: README.md
docs/: autor.html  freecad.html  index.html  proyecto.html
docs/assets/css/: style.css
ejercicio_py_1/: package.xml  setup.cfg  setup.py
ejercicio_py_1/ejercicio_py_1/: node_a.py  node_b.py  node_c.py
ejercicio_py_2/: package.xml  setup.cfg  setup.py
ejercicio_py_2/ejercicio_py_2/: publish_distance.py  publish_tf.py  publish_tf_2.py
ejercicio_py_3/: package.xml  setup.cfg  setup.py
gui_py/: package.xml  setup.cfg  setup.py
gui_py/gui_py/: gui.py
my_interfaces/: CMakeLists.txt  package.xml
my_interfaces/action/: Aleatorio.action
my_interfaces/srv/: IntHex.srv
my_launch/: CMakeLists.txt  package.xml
my_launch/launch/: ejercicio1.launch.xml
proyecto_final/: package.xml  setup.py
proyecto_final/freecad/: roomba.20260330-143448.FCBak  roomba.FCStd
robot_bringup_gz/: CMakeLists.txt  package.xml
robot_bringup_gz/config/: gazebo_bridge.yaml
robot_bringup_gz/launch/: launch.xml
robot_bringup_gz/world/: mi_mundo.sdf
robot_description/: CMakeLists.txt  package.xml
robot_description/meshes/: roomba-body.stl  roomba-lidar.stl  roomba-wheel.stl
robot_description/rviz/: frames_2026-03-30_18.57.56.gv  frames_2026-04-05_15.21.34.gv
robot_description/urdf/: common_properties.xacro  mobil_base.xacro  mobil_base_gazebo.xacro  robot_final.urdf.xacro
robot_ejercicio3/: CMakeLists.txt  package.xml
robot_ejercicio3/urdf/: robot_common.xacro  robot_ejercicio3.urdf.xacro  robot_ejercicio3.xacro  robot_geometry.xacro
